fix background on mobile

--- a/src/pages/division/style.css
+++ b/src/pages/division/style.css
@@ -1,3 +1,21 @@
+.home {
+  background: url(../../assets/background.webp),
+    radial-gradient(
+      closest-side at center,
+      #6d5fff 0%,
+      #5d52dd 42%,
+      #283771 100%
+    );
+  background-blend-mode: overlay;
+  background-repeat: repeat;
+  background-position: center;
+  background-size: cover;
+}
+@media (max-width: 450px) {
+  .home {
+    background-size: contain;
+  }
+}
 .inner-shadow {
   box-shadow: inset 0px 4px 50px #afefff;
 }
