--- a/src/pages/faq/style.css
+++ b/src/pages/faq/style.css
@@ -1,14 +1,31 @@
 .background-mentoring {
-    background: url(../../assets/background.webp), radial-gradient(closest-side at center, #6d5FFF 0%, #5d52dd 42%, #283771 100%);
-    background-blend-mode: overlay;
-    background-repeat: repeat;
-    background-position: center;
+  background: url(../../assets/background.webp),
+    radial-gradient(
+      closest-side at center,
+      #6d5fff 0%,
+      #5d52dd 42%,
+      #283771 100%
+    );
+  background-blend-mode: overlay;
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+}
+.home {
+  background: url(../../assets/background.webp),
+    radial-gradient(
+      closest-side at center,
+      #6d5fff 0%,
+      #5d52dd 42%,
+      #283771 100%
+    );
+  background-blend-mode: overlay;
+  background-repeat: repeat;
+  background-position: center;
+  background-size: cover;
+}
+@media (max-width: 450px) {
+  .home {
     background-size: contain;
   }
-  .home {
-    background: url(../../assets/background.webp), radial-gradient(closest-side at center, #6d5FFF 0%, #5d52dd 42%, #283771 100%);
-    background-blend-mode: overlay;
-    background-repeat: repeat;
-    background-position: center;
-    background-size: cover;
-  }
+}
