--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -6,11 +6,22 @@
   background-size: contain;
 }
 .home {
-  background: url(../../assets/background.webp), radial-gradient(closest-side at center, #6d5FFF 0%, #5d52dd 42%, #283771 100%);
+  background: url(../../assets/background.webp),
+    radial-gradient(
+      closest-side at center,
+      #6d5fff 0%,
+      #5d52dd 42%,
+      #283771 100%
+    );
   background-blend-mode: overlay;
   background-repeat: repeat;
   background-position: center;
   background-size: cover;
+}
+@media (max-width: 450px) {
+  .home {
+    background-size: contain;
+  }
 }
 .shadow-logo-home {
   -webkit-filter: drop-shadow(0px 13px 6px rgba(24, 35, 50, 0.5));
